--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -29,7 +29,7 @@
     <string name="ussdRunning" msgid="485588686340541690">"Запускаецца USSD-код..."</string>
     <string name="mmiCancelled" msgid="2771923949751842276">"Код MMI адменены"</string>
     <string name="cancel" msgid="5044513931633602634">"Адмяніць"</string>
-    <string name="enter_input" msgid="1810529547726803893">"Паведамленне USSD павінна складацца з наступнай колькасцi знакаў:  ад <xliff:g id="MIN_LEN">%d</xliff:g> да <xliff:g id="MAX_LEN">%d</xliff:g>. Паспрабуйце яшчэ раз."</string>
+    <string name="enter_input" msgid="1810529547726803893">"Паведамленне USSD павінна складацца з наступнай колькасцi знакаў:  ад <xliff:g id="min_len">%1$d</xliff:g> да <xliff:g id="max_len">%2$d</xliff:g>. Паспрабуйце яшчэ раз."</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Кіраванне канферэнц-выклікам"</string>
     <string name="ok" msgid="3811371167865772377">"ОК"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"Дынамік"</string>
