--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -29,7 +29,7 @@
     <string name="ussdRunning" msgid="485588686340541690">"USSD ক\'ড চলি আছে…"</string>
     <string name="mmiCancelled" msgid="2771923949751842276">"MMI ক\'ড বাতিল কৰা হ’ল"</string>
     <string name="cancel" msgid="5044513931633602634">"বাতিল কৰক"</string>
-    <string name="enter_input" msgid="1810529547726803893">"USSD বাৰ্তাটো <xliff:g id="MIN_LEN">%d</xliff:g> আৰু <xliff:g id="MAX_LEN">%d</xliff:g> সংখ্যক বৰ্ণৰ ভিতৰত হ\'ব লাগিব। অনুগ্ৰহ কৰি আকৌ চেষ্টা কৰক।"</string>
+    <string name="enter_input" msgid="1810529547726803893">"USSD বাৰ্তাটো <xliff:g id="min_len">%1$d</xliff:g> আৰু <xliff:g id="max_len">%2$d</xliff:g> সংখ্যক বৰ্ণৰ ভিতৰত হ\'ব লাগিব। অনুগ্ৰহ কৰি আকৌ চেষ্টা কৰক।"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"কনফাৰেঞ্চ কল পৰিচালনা কৰক"</string>
     <string name="ok" msgid="3811371167865772377">"ঠিক"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"স্পীকাৰ"</string>
