--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -29,7 +29,7 @@
     <string name="ussdRunning" msgid="485588686340541690">"‏קוד USSD פועל…"</string>
     <string name="mmiCancelled" msgid="2771923949751842276">"‏קוד MMI מבוטל"</string>
     <string name="cancel" msgid="5044513931633602634">"ביטול"</string>
-    <string name="enter_input" msgid="1810529547726803893">"‏הודעת USSD חייבת להיות באורך של <xliff:g id="MIN_LEN">%d</xliff:g> עד <xliff:g id="MAX_LEN">%d</xliff:g> תווים. נסה שוב."</string>
+    <string name="enter_input" msgid="1810529547726803893">"‏הודעת USSD חייבת להיות באורך של <xliff:g id="min_len">%1$d</xliff:g> עד <xliff:g id="max_len">%2$d</xliff:g> תווים. נסה שוב."</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"ניהול שיחת ועידה"</string>
     <string name="ok" msgid="3811371167865772377">"אישור"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"רמקול"</string>
